Added a configurable backend URL to the fronted part.

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <script src="/main.js"></script>
+    <script src="/config.js" onLoad="startApp(window.config);"></script>
   </body>
 </html>
